--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-loading">
-
+		<iframe width="0" height="0" src="https://www.youtube.com/embed/INFJIko_tdM?autoplay=1&amp;controls=0&amp;showinfo=0&amp;autohide=1"></iframe>
 		<!-- Wrapper -->
 			<div id="wrapper">
 
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<span class="avatar"><img src="https://pbs.twimg.com/profile_images/802834780320567296/hihuXQ33_400x400.jpg" alt="" /></span>
+							<h1>beta</h1>
+							<p></p>
 						</header>
 						<!--
 						<hr />
@@ -66,9 +66,10 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="http://twitter.com/betaschaf" class="fa-twitter">Twitter</a></li>
+								<li><a href="http://instagram.com/betaschaf" class="fa-instagram">Instagram</a></li>
+								<li><a href="http://discord.gg/0x9vOmLhcpsAPyrf" class="fa fa-comments">Discord</a></li>
+								<li><a href="http://cortanandiscord.github.io" class="http://img.talkandroid.com/uploads/2015/12/cortana-for-android-app-logo.png">Cortana</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -76,7 +77,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; beta#0922</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
