--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="http://twitter.com/betaschaf" class="fa-twitter">Twitter</a></li>
+								<li><a href="https://www.youtube.com/channel/UCRzKpMr5dIG1za-gAj5chqQ" class="fa-youtube">Youtube</a></li>
 								<li><a href="http://instagram.com/betaschaf" class="fa-instagram">Instagram</a></li>
 								<li><a href="http://discord.gg/0x9vOmLhcpsAPyrf" class="fa fa-comments">Discord</a></li>
-								<li><a href="http://cortanandiscord.github.io" class="http://img.talkandroid.com/uploads/2015/12/cortana-for-android-app-logo.png">Cortana</a></li>
+								<li><a href="http://github.com/betaschaf" class="fa-github">GitHub</a></li>
+								<li><a href="http://cortanandiscord.github.io" class="fa fa-circle-o">Cortana</a></li>
 							</ul>
 						</footer>
 					</section>
