--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								<li><a href="http://instagram.com/betaschaf" class="fa-instagram">Instagram</a></li>
 								<li><a href="http://discord.gg/0x9vOmLhcpsAPyrf" class="fa fa-comments">Discord</a></li>
 								<li><a href="http://github.com/betaschaf" class="fa-github">GitHub</a></li>
-								<li><a href="http://cortanandiscord.github.io" class="fa fa-circle-o">Cortana</a></li>
+								<li><a href="http://cortanadiscord.github.io" class="fa fa-circle-o">Cortana</a></li>
 							</ul>
 						</footer>
 					</section>
