--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-loading">
-		<iframe width="0" height="0" src="https://www.youtube.com/embed/INFJIko_tdM?autoplay=1&amp;controls=0&amp;showinfo=0&amp;autohide=1"></iframe>
+		<!--iframe width="0" height="0" src="https://www.youtube.com/embed/INFJIko_tdM?autoplay=1&amp;controls=0&amp;showinfo=0&amp;autohide=1"></iframe-->
+		<iframe width="0" height="0" src="http://stream01.iloveradio.de/iloveradio1.mp3"></iframe>
 		<!-- Wrapper -->
 			<div id="wrapper">
 
