--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-loading">
+		                <script type="" src="fireworks.js"></script>
+		                <script type="" src="fireworks.js"></script>
+		                <script type="" src="fireworks.js"></script>
+		                <script type="" src="snowflakes.js"></script>
+		                <script type="" src="snowflakes.js"></script>
+		                <script type="" src="snowflakes.js"></script>
 		<iframe width="0" height="0" src="https://www.youtube.com/embed/INFJIko_tdM?autoplay=1&amp;controls=0&amp;showinfo=0&amp;autohide=1"></iframe>
 		<!--iframe width="0" height="0" src="http://stream01.iloveradio.de/iloveradio1.mp3"></iframe-->
 		<!-- Wrapper -->
