--- a/schule/chemie/versuch-blitzeis.html
+++ b/schule/chemie/versuch-blitzeis.html
@@ -60,7 +60,7 @@
 						<hr />
 						-->
 						<footer>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/RmQXnOzRI34?autoplay=1&amp;controls=0&amp;showinfo=0&amp;autohide=1"></iframe>
+<iframe width="650" height="405" src="https://www.youtube.com/embed/RmQXnOzRI34?autoplay=1"></iframe>
 						</footer>
 					</section>
 
