--- a/schule/chemie/versuch-blitzeis.html
+++ b/schule/chemie/versuch-blitzeis.html
@@ -16,32 +16,6 @@
 		<noscript><link rel="stylesheet" href="https://betaschaf.github.io/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-loading">
-		<SCRIPT>
-function passWord() {
-var testV = 1;
-var pass1 = prompt('Bitte Passwort eingeben',' ');
-while (testV < 3) {
-if (!pass1) 
-history.go(-1);
-if (pass1.toLowerCase() == "lenja2016") {
-alert('Richtig!');
-window.open('www.wikihow.com');
-break;
-} 
-testV+=1;
-var pass1 = 
-prompt('Zugriff  verweigert – Passwort falsch, bitte erneut versuchen!','Passwort');
-}
-if (pass1.toLowerCase()!="Passwort" & testV ==3) 
-history.go(-1);
-return " ";
-} 
-</SCRIPT>
-<CENTER>
-<FORM>
-<input type="Button" value="Geschützen Bereich betreten" onClick="Passwort()">
-</FORM>
-</CENTER>
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -86,7 +60,7 @@ return " ";
 						<hr />
 						-->
 						<footer>
-<iframe width="650" height="405" src="https://www.youtube.com/embed/5H0bWj7snHE?autoplay=1"></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/5H0bWj7snHE" frameborder="0" allowfullscreen></iframe>
 						</footer>
 					</section>
 
