--- a/schule/chemie/versuch-blitzeis.html
+++ b/schule/chemie/versuch-blitzeis.html
@@ -60,7 +60,7 @@
 						<hr />
 						-->
 						<footer>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/5H0bWj7snHE" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/lmJmhi9_L9U" frameborder="0" allowfullscreen></iframe>
 						</footer>
 					</section>
 
