--- a/schule/downloads/chemie.html
+++ b/schule/downloads/chemie.html
@@ -5,7 +5,8 @@
 		<title>Weiterleitung</title>
 	</head>
 <body>
-	<a href="https://betaschaf.github.io/schule/downloads/chemie/stahl.html" class="">Stahl</a>
+	<a href="https://betaschaf.github.io/schule/downloads/chemie/stahl.html" class="">Stahl-Raw</a>
+	<a href="https://betaschaf.github.io/schule/downloads/chemie/stahl.docx" class="">Stahl-Word</a>
   <p>---</p>
   <a href="https://betaschaf.github.io/schule.html" class="">Schule</a>
 </body>
