--- a/music/at/kronehit.html
+++ b/music/at/kronehit.html
@@ -3,10 +3,11 @@
 	Identity by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+--> 
 <html>
 	<head>
-		<title>beta</title>
+		<link rel="icon" href="https://s3.amazonaws.com/piktochartv2-dev/v2/uploads/e8f8d5e9-abe4-4e75-983c-f88124bb210d/da9042802cd9f5fa395771778ca64aac6f0c7ff0_original.png">
+		<title>KRONEHIT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=2" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -24,7 +25,7 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="https://s3.amazonaws.com/piktochartv2-dev/v2/uploads/e8f8d5e9-abe4-4e75-983c-f88124bb210d/da9042802cd9f5fa395771778ca64aac6f0c7ff0_original.png" alt="" /></span>
-							<h1>beta</h1>
+							<h1>KRONEHIT</h1>
 							<p></p>
 						</header>
 						<!--
