--- a/music/de/einslivediggi.html
+++ b/music/de/einslivediggi.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<link rel="icon" href="http://static.radio.de/images/broadcasts/cd/0d/1383/c300.png">
-		<title>1Diggi - 1LIVE Diggi</title>
+		<title>1LIVE Diggi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=2" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
