--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 								<li><a href="http://instagram.com/betaschaf" class="fa-instagram">Instagram</a></li>
 								<li><a href="http://discord.gg/0x9vOmLhcpsAPyrf" class="fa fa-comments">Discord</a></li>
 								<li><a href="http://github.com/betaschaf" class="fa-github">GitHub</a></li>
+								<li><a href="http://www.deezer.com/profile/1343688544" class="fa-music">Deezer</a></li>
+								<li><a href="https://open.spotify.com/user/betaschaf_instantschaf" class="fa-spotify">Spotify</a></li>
 								<li><a href="http://einfachmc.de" class="">EAlex</a></li>
 								<li><a href="http://cortanadiscord.github.io" class="fa fa-circle-o">Cortana</a></li>
 							</ul>
