--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="https://scontent-vie1-1.cdninstagram.com/t51.2885-19/s150x150/15258776_1260776823958658_8877178229480226816_a.jpg" alt="" /></span>
+							<span class="avatar"><img src="https://scontent-frt3-1.cdninstagram.com/t51.2885-19/s150x150/16122971_240674676402648_3871226595670753280_a.jpg" alt="" /></span>
 							<h1>beta</h1>
 							<p></p>
 						</header>
