--- a/schule/downloads.html
+++ b/schule/downloads.html
@@ -6,6 +6,7 @@
 	</head>
 <body>
 	<a href="https://betaschaf.github.io/schule/downloads/chemie.html" class="">Chemie-Downloads</a>
+	<a href="https://betaschaf.github.io/schule/downloads/deutsch.html" class="">Deutsch-Downloads</a>
   <p>---</p>
   <a href="https://betaschaf.github.io/schule.html" class="">Schule</a>
 </body>
