--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 								<li><a href="http://github.com/betaschaf" class="fa-github">GitHub</a></li>
 								<li><a href="http://www.deezer.com/profile/1343688544" class="fa-music">Deezer</a></li>
 								<li><a href="https://open.spotify.com/user/betaschaf_instantschaf" class="fa-spotify">Spotify</a></li>
+								<li><a href="https://soundcloud.com/beta0922" class="fa-soundcloud">Soundcloud</a></li>
+								<li><a href="https://www.twitch.tv/beta0922" class="fa-twitch">Twitch</a></li>
 								<li><a href="http://einfachmc.de" class="">EAlex</a></li>
 								<li><a href="http://cortanadiscord.github.io" class="fa fa-circle-o">Cortana</a></li>
 							</ul>
