Uploaded "webhook.html" to "betaschaf.github.io" from "https://gist.github.com/jtvjan/b50218f2c81b4fb1161b7b013b7bd45c"

--- a/webhook.html
+++ b/webhook.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!---THIS IS FROM--->
+<!---https://gist.github.com/jtvjan/b50218f2c81b4fb1161b7b013b7bd45c--->
 <html>
 <head>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel=
