--- a/test001.html
+++ b/test001.html
@@ -5,7 +5,7 @@
 <script type="text/javascript">
 if (document.getElementById("tester") == undefined) 
 { 
-document.write(' <div id="adblocker" class="error">Bitte deaktiviere deinen AdBlocker!</div>'); 
+document.write(' <div id="adblocker" class="error"></div>'); 
 }
  
 </script> <div id="adblocker" class="error">Bitte deaktiviere deinen AdBlocker!</div>
