--- a/test001.html
+++ b/test001.html
@@ -5,10 +5,10 @@
 <script type="text/javascript">
 if (document.getElementById("tester") == undefined) 
 { 
-document.write(' <div id="adblocker" class="error"></div>'); 
+document.write(' <div id="adblocker" class="error">Bitte deaktiviere deinen AdBlocker!</div>'); 
 }
  
-</script> <div id="adblocker" class="error">Bitte deaktiviere deinen AdBlocker!</div>
+</script> <div id="adblocker" class="error"></div>
 </div>
 
 </body></html>
