--- a/test001.html
+++ b/test001.html
@@ -8,7 +8,7 @@ if (document.getElementById("tester") == undefined)
 document.write(' <div id="adblocker" class="error">Bitte deaktiviere deinen AdBlocker!</div>'); 
 }
  
-</script> <div id="adblocker" class="error"></div>
+</script> <div id="adblocker" class="error">Error</div>
 </div>
 
 </body></html>
