--- a/test001.html
+++ b/test001.html
@@ -8,10 +8,8 @@ if (document.getElementById("tester") == undefined)
 document.write(' <div id="adblocker" class="error">Bitte deaktiviere deinen AdBlocker!</div>'); 
 }
  
-</script> <div id="adblocker" class="error"></div>
+</script> <div id="adblocker" class="error"><a href="https://www.google.at">Text</a></div>
 <div class="section">
-<p id="errorMessage">
-Die von Ihnen angeforderte Seite wurde nicht gefunden.</p>
 </div>
 <div class="dialogOverlay" aria-hidden="true"></div></div>
 
