--- a/test001.html
+++ b/test001.html
@@ -5,11 +5,12 @@
 <script type="text/javascript">
 if (document.getElementById("tester") == undefined) 
 { 
-document.write(' <div id="adblocker" class="error">Bitte deaktiviere deinen AdBlocker!</div>'); 
+document.write(' <div id="adblocker" class="error"><meta http-equiv="refresh" content="0; URL=adblocker.html"></div>'); 
 }
  
-</script> <div id="adblocker" class="error"><a href="https://www.google.at">Text</a></div>
+</script>
 <div class="section">
+ <p>Bla</p>
 </div>
 <div class="dialogOverlay" aria-hidden="true"></div></div>
 
