--- a/adblocker.html
+++ b/adblocker.html
@@ -1,5 +1,12 @@
 <html><body>
 <font size="6">Deaktiviere deinen Adblocker!</font>
 <font size="3">Wenn du fertig bist, kehre zur verherigen Seite zurück.</font>
-<a href="javascript:window.back()">Zurück</a>
+<script>
+function goback() {
+    history.go(-1);
+}
+</script>
+ 
+ 
+ <a href=”javascript:goback()”>Zurück</a>
 </body></html>
