--- a/adblocker.html
+++ b/adblocker.html
@@ -1,12 +1,5 @@
 <html><body>
 <font size="6">Deaktiviere deinen Adblocker!</font>
 <font size="3">Wenn du fertig bist, kehre zur verherigen Seite zurück.</font>
-<script>
-function goback() {
-    history.go(-1);
-}
-</script>
- 
- 
- <a href=”javascript:goback()”>Zurück</a>
+<a href="#" onclick="history.back(); return false">Zurück</a>
 </body></html>
