--- a/adblocker.html
+++ b/adblocker.html
@@ -1,5 +1,5 @@
 <html><body>
 <font size="6">Deaktiviere deinen Adblocker!</font>
 <font size="3">Wenn du fertig bist, kehre zur verherigen Seite zurück.</font>
-<a href="#" onclick="history.back(); return false">Zurück</a>
+<a href="javascript:history.back()">Zurück</a>
 </body></html>
