--- a/adblocker.html
+++ b/adblocker.html
@@ -1,5 +1,5 @@
 <html><body>
 <font size="6">Deaktiviere deinen Adblocker!</font>
 <font size="3">Wenn du fertig bist, kehre zur verherigen Seite zurück.</font>
-<a href="javascript:history.back()">Zurück</a>
+<script type="text/javascript">document.write(<a href="javascript:history.back()"><img src="images/template/backbutton.png" alt="" /><span style="font-size: 13px;"> Zurück</span></a>)</script>
 </body></html>
