--- a/adblocker.html
+++ b/adblocker.html
@@ -1,5 +1,5 @@
 <html><body>
 <font size="6">Deaktiviere deinen Adblocker!</font>
 <font size="3">Wenn du fertig bist, kehre zur verherigen Seite zurück.</font>
-<script type="text/javascript">document.write('<a href="javascript:history.back()"><img src="https://cdn.discordapp.com/attachments/220451802477232128/389818184091435008/61791.png" alt="" /><span style="font-size: 13px;"> Zurück</span></a>')</script>
+<script type="text/javascript">document.write('<a href="javascript:history.back()"><img src="https://cdn.discordapp.com/attachments/220451802477232128/389818962805784578/arrow-left.png" alt="Back" /><span style="font-size: 13px;"></span></a>')</script>
 </body></html>
