--- a/anti-adblock/index.html
+++ b/anti-adblock/index.html
@@ -1,4 +1,4 @@
-<html><body>
+<html><head><meta http-equiv="refresh"  target="_self" content="10"></head><body>
 
 <div id="content" class="content">
 <script type="text/javascript" src="advertisement.js" style="display: none !important;"></script>
