--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body class="is-loading">
 		                <script type="" src="snowflakes.js"></script>
-		<iframe width="0" height="0" src=" https://soundcloud.com/tune-collective/paris"></iframe>
+		<iframe width="0" height="0" src="https://api.soundcloud.com/tracks/303723395&amp;color=%23ff5500&amp;auto_play=true"></iframe>
 		<!--iframe width="0" height="0" src="http://stream01.iloveradio.de/iloveradio1.mp3"></iframe-->
 		<!-- Wrapper -->
 			<div id="wrapper">
