--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body class="is-loading">
 		                <script type="" src="snowflakes.js"></script>
-		<iframe width="0" height="0" src="https://api.soundcloud.com/tracks/303723395&amp;color=%23ff5500&amp;auto_play=true"></iframe>
+		<iframe width="0" height="0" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/303723395&amp;color=%23ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
 		<!--iframe width="0" height="0" src="http://stream01.iloveradio.de/iloveradio1.mp3"></iframe-->
 		<!-- Wrapper -->
 			<div id="wrapper">
