--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
 				}
 			</script>
+		<script type="text/javascript" src="https://www.whomania.com/count/iyd"></script><br>
+ <a href='https://xn--besucherzhler-counter-e2b.com/'>Website Counter</a> <script type='text/javascript' src='https://whomania.com/ctr?id=1f99dc0b8b9db98f730516df3057892cc3f777ef'></script>
 
 	</body>
 </html>
