--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
 					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
 				}
 			</script>
-		<<script type="text/javascript" src="https://www.whomania.com/count/iyi"></script><br>
- <a href='https://xn--besucherzhler-counter-e2b.com/'>Website Counter</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=e93d5973919a0114ac474feca5ec3c87afae5aad'></script>
+<script type="text/javascript" src="https://www.whomania.com/count/iyi"></script><br><a href='https://xn--besucherzhler-counter-e2b.com/'>Website Counter</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=e93d5973919a0114ac474feca5ec3c87afae5aad'></script>
 	</body>
 </html>
