--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="https://betaschaf.github.io/assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-loading">
+	<body class="is-loading"><embed src="worldwidefm.mp3" autostart="true" loop="true" hidden="true" height="0" width="0">
 		                <script type="" src="snowflakes.js"></script>
 		<!--iframe width="0" height="0" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/303723395&amp;color=%23ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe-->
-		<iframe width="0" height="0" src="http://www.youtube.com/embed/PIzT0BsELKo?autoplay=1" frameborder="0" allowfullscreen></iframe>
+<bgsound src="worldwidefm.mp3" loop="infinite">
 		<!--iframe width="0" height="0" src="http://stream01.iloveradio.de/iloveradio1.mp3"></iframe-->
 		<!-- Wrapper -->
 			<div id="wrapper">
