--- a/miner.html
+++ b/miner.html
@@ -1,14 +1,28 @@
-<html><body><h3>MINER</h3><script src="https://authedmine.com/lib/simple-ui.min.js" async></script>
-<div class="coinhive-miner" 
+<!--COPYRIGHT LENNY N.-->
+<!--Coinhive logo design is a trademark of coinhive-->
+<html>
+<head><style>
+body {
+  background:#2c3e50 no-repeat;
+  font: 80% Verdana, Arial, Helvetica, sans-serif;
+}
+h1 {
+  color: #bdc3c7;
+  font-size: 48pt;
+  width: 400px;
+  height: 20px;
+}
+</style></head><body><center><h1>MINER</h1><script src="https://authedmine.com/lib/simple-ui.min.js" async></script>
+<div class="coinhive-miner"
 	style="width: 256px; height: 310px"
 	data-key="fFPf0rj2Y9FXo3vZL4EAo6ZUCnvflKvr"
 	data-autostart="true"
 	data-whitelabel="false"
-	data-background="#000000"
-	data-text="#eeeeee"
-	data-action="#00ff00"
+	data-background="#2c3e50"
+	data-text="#95a5a6"
+	data-action="#34495e"
 	data-graph="#555555"
 	data-threads="4"
 	data-throttle="0.1">
 	<em>Loading...</em>
-</div></body></html>
+</div></center></body></html>
