--- a/miner.html
+++ b/miner.html
@@ -1,7 +1,7 @@
 <!--COPYRIGHT LENNY N.-->
 <!--Coinhive logo design is a trademark of coinhive-->
 <html>
-<head><style>
+<head><title>Miner</title><style>
 body {
   background:#2c3e50 no-repeat;
   font: 80% Verdana, Arial, Helvetica, sans-serif;
