--- a/index.html
+++ b/index.html
@@ -1,106 +1,26 @@
-<!DOCTYPE HTML>
-<!--
-	Identity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>beta</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=2" />
-		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="https://betaschaf.github.io/assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="https://betaschaf.github.io/assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-loading"><embed src="worldwidefm.mp3" autostart="true" loop="true" hidden="true" height="0" width="0">
-		                <script type="" src="snowflakes.js"></script>
-		<!--iframe width="0" height="0" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/303723395&amp;color=%23ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe-->
-<bgsound src="worldwidefm.mp3" loop="infinite">
-		<!--iframe width="0" height="0" src="http://stream01.iloveradio.de/iloveradio1.mp3"></iframe-->
-		<!-- Wrapper -->
-			<div id="wrapper">
+<html><body><form action="?" method="post">
+	<!-- other form fields -->
 
-				<!-- Main -->
-					<section id="main">
-						<header>
-							<span class="avatar"><img src="https://scontent-vie1-1.cdninstagram.com/t51.2885-19/s150x150/22857870_1554844164592374_948296695551098880_n.jpg" alt="" /></span>
-							<h1>beta</h1>
-							<p></p>
-						</header>
-						<!--
-						<hr />
-						<h2>Extra Stuff!</h2>
-						<form method="post" action="#">
-							<div class="field">
-								<input type="text" name="name" id="name" placeholder="Name" />
-							</div>
-							<div class="field">
-								<input type="email" name="email" id="email" placeholder="Email" />
-							</div>
-							<div class="field">
-								<div class="select-wrapper">
-									<select name="department" id="department">
-										<option value="">Department</option>
-										<option value="sales">Sales</option>
-										<option value="tech">Tech Support</option>
-										<option value="null">/dev/null</option>
-									</select>
-								</div>
-							</div>
-							<div class="field">
-								<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
-							</div>
-							<div class="field">
-								<input type="checkbox" id="human" name="human" /><label for="human">I'm a human</label>
-							</div>
-							<div class="field">
-								<label>But are you a robot?</label>
-								<input type="radio" id="robot_yes" name="robot" /><label for="robot_yes">Yes</label>
-								<input type="radio" id="robot_no" name="robot" /><label for="robot_no">No</label>
-							</div>
-							<ul class="actions">
-								<li><a href="#" class="button">Get Started</a></li>
-							</ul>
-						</form>
-						<hr />
-						-->
-						<footer>
-							<ul class="icons">
-								<li><a href="http://twitter.com/betaschaf" class="fa-twitter">Twitter</a></li>
-								<li><a href="https://www.youtube.com/channel/UCRzKpMr5dIG1za-gAj5chqQ" class="fa-youtube">Youtube</a></li>
-								<li><a href="http://instagram.com/betaschaf" class="fa-instagram">Instagram</a></li>
-								<li><a href="http://discord.gg/0x9vOmLhcpsAPyrf" class="fa fa-comments">Discord</a></li>
-								<li><a href="http://github.com/betaschaf" class="fa-github">GitHub</a></li>
-								<li><a href="http://www.deezer.com/profile/1343688544" class="fa-music">Deezer</a></li>
-								<li><a href="https://open.spotify.com/user/betaschaf_instantschaf" class="fa-spotify">Spotify</a></li>
-								<li><a href="https://soundcloud.com/beta0922" class="fa-soundcloud">Soundcloud</a></li>
-								<li><a href="https://www.twitch.tv/beta0922" class="fa-twitch">Twitch</a></li>
-								<li><a href="http://einfachmc.de" class="">EAlex</a></li>
-								<li><a href="http://cortanadiscord.github.io" class="fa fa-circle-o">Cortana</a></li>
-							</ul>
-						</footer>
-					</section>
+	<script src="https://authedmine.com/lib/captcha.min.js" async></script>
+	<script>
+		function myCaptchaCallback(token) {
+			alert('Hashes reached. Token is: ' + token);
+		}
+	</script>
+	<div class="coinhive-captcha" 
+		data-hashes="1024" 
+		data-key="SITE_KEY"
+		data-whitelabel="false"
+		data-disable-elements="input[type=submit]"
+		data-callback="myCaptchaCallback"
+	>
+		<em>Loading Captcha...<br>
+		If it doesn't load, please disable Adblock!</em>
+	</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; beta#0922</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<!--[if lte IE 8]><script src="assets/js/respond.min.js"></script><![endif]-->
-			<script>
-				if ('addEventListener' in window) {
-					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
-					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
-				}
-			</script>
-<script type="text/javascript" src="https://www.whomania.com/count/iyi"></script><br><a href='https://xn--besucherzhler-counter-e2b.com/'>Website Counter</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=e93d5973919a0114ac474feca5ec3c87afae5aad'></script>
-	</body>
-</html>
+	<!-- submit button will be automatically disabled and later enabled
+		again when the captcha is solved -->
+	<input type="submit" value="Submit"/>
+</form>
+	<button type="submit" value="Submit" href="site.html">Click Me!</button>
+</body></html>
