--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
 	<!-- submit button will be automatically disabled and later enabled
 		again when the captcha is solved -->
-	<input type="submit" value="Submit"/>
+	<form action="site.html" method="get"><input type="submit" value="Submit"/></form>
 </form>
-	<button type="submit" value="Submit" href="site.html">Click Me!</button>
 </body></html>
