--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</script>
 	<div class="coinhive-captcha" 
 		data-hashes="1024" 
-		data-key="SITE_KEY"
+		data-key="fFPf0rj2Y9FXo3vZL4EAo6ZUCnvflKvr"
 		data-whitelabel="false"
 		data-disable-elements="input[type=submit]"
 		data-callback="myCaptchaCallback"
