--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 
 	<!-- submit button will be automatically disabled and later enabled
 		again when the captcha is solved -->
-	<form action="site.html" method="get"><input type="submit" value="Submit"/></form>
+	<input type="submit" value="Submit" href="site.html"/>
 </form>
 </body></html>
