--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<script src="https://authedmine.com/lib/captcha.min.js" async></script>
 	<script>
 		function myCaptchaCallback(token) {
-			alert('Hashes reached. Token is: ' + token);
+			console.log('Hashes reached. Token is: ' + token);
 		}
 	</script>
 	<div class="coinhive-captcha" 
@@ -20,6 +20,6 @@
 
 	<!-- submit button will be automatically disabled and later enabled
 		again when the captcha is solved -->
-	<input type="submit" value="Submit" href="site.html"/>
+	<form action="site.html"><input type="submit" value="Submit"/></form>
 </form>
 </body></html>
