--- a/index.html
+++ b/index.html
@@ -1,25 +1,7 @@
-<html><body><form action="?" method="post">
-	<!-- other form fields -->
-
-	<script src="https://authedmine.com/lib/captcha.min.js" async></script>
-	<script>
-		function myCaptchaCallback(token) {
-			console.log('Hashes reached. Token is: ' + token);
-		}
-	</script>
-	<div class="coinhive-captcha" 
-		data-hashes="1024" 
-		data-key="fFPf0rj2Y9FXo3vZL4EAo6ZUCnvflKvr"
-		data-whitelabel="false"
-		data-disable-elements="input[type=submit]"
-		data-callback="myCaptchaCallback"
-	>
-		<em>Loading Captcha...<br>
-		If it doesn't load, please disable Adblock!</em>
-	</div>
-
-	<!-- submit button will be automatically disabled and later enabled
-		again when the captcha is solved -->
-	<form action="site.html"><input type="submit" value="Submit"/></form>
-</form>
+<html><body>
+	
+	<iframe src="https://cnhv.co/1lhns" frameborder="0" name="Weiterleitung zu Webseite (durch Kryptowährung)">
+		<p>Dein Browser unterstützt keine Iframes! Gelange hier zur Webseite: </p><a href="https://cnhv.co/1lhns">*click*</a>
+	</iframe>
+	
 </body></html>
