Added Title to MINER-Weiterleitung

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><body>
+<html><head><title>beta</title></head><body>
 	
 	<iframe src="https://cnhv.co/1lhns" frameborder="0" name="Weiterleitung zu Webseite (durch Kryptowährung)" width="90%" height="90%">
 		<p>Dein Browser unterstützt keine Iframes! Gelange hier zur Webseite: </p><a href="https://cnhv.co/1lhns">*click*</a>
