--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head><title>beta</title></head><body>
 	
-	<iframe src="https://cnhv.co/1lhns" frameborder="0" name="Weiterleitung zu Webseite (durch Kryptowährung)" width="90%" height="90%">
+	<iframe src="https://cnhv.co/1lhns" frameborder="0" name="Weiterleitung zu Webseite (durch Kryptowährung)" scrolling="no" width="100%" height="100%">
 		<p>Dein Browser unterstützt keine Iframes! Gelange hier zur Webseite: </p><a href="https://cnhv.co/1lhns">*click*</a>
 	</iframe>
 	
