--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html><head><title>beta</title></head><body>
-	
-	<iframe src="https://cnhv.co/1lhns" overflow:"hidden" frameborder="0" name="Weiterleitung zu Webseite (durch Kryptowährung)" scrolling="no" width="98%" height="97%">
+	<frameset cols="100%">
+	<frame src="https://cnhv.co/1lhns" overflow:"hidden" frameborder="0" name="Weiterleitung zu Webseite (durch Kryptowährung)" scrolling="no" width="98%" height="97%">
 		<p>Dein Browser unterstützt keine Iframes! Gelange hier zur Webseite: </p><a href="https://cnhv.co/1lhns">*click*</a>
-	</iframe>
+	</frame>
+	</frameset>
 	
 </body></html>
