--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html><head><title>beta</title></head><body>
-	<frameset cols="100%">
-	<frame src="https://cnhv.co/1lhns" overflow:"hidden" frameborder="0" name="Weiterleitung zu Webseite (durch Kryptowährung)" scrolling="no" width="98%" height="97%">
+	<iframe src="https://cnhv.co/1lhns" frameborder="0" scrolling="no">
 		<p>Dein Browser unterstützt keine Frames! Gelange hier zur Webseite: </p><a href="https://cnhv.co/1lhns">*click*</a>
-	</frame>
-	</frameset>
+	</iframe>
 	
 </body></html>
