--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head><title>beta</title></head><body>
 	<iframe src="https://cnhv.co/1lhns" frameborder="0" scrolling="no">
-		<p>Dein Browser unterstützt keine Frames! Gelange hier zur Webseite: </p><a href="https://cnhv.co/1lhns">*click*</a>
+		<p>Dein Browser unterstützt keine iframes! Gelange hier zur Webseite: </p><a href="https://cnhv.co/1lhns">*click*</a>
 	</iframe>
 	
 </body></html>
