--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<html><head><title>beta</title></head><body>
-	<iframe src="https://cnhv.co/1lhns" frameborder="0" scrolling="no">
-		<p>Dein Browser unterstützt keine iframes! Gelange hier zur Webseite: </p><a href="https://cnhv.co/1lhns">*click*</a>
-	</iframe>
+<html><head><title>beta</title>
+	<meta http-equiv="refresh" content="0; URL=https://cnhv.co/1lhns"></head><body>
 	
 </body></html>
