--- a/site.html
+++ b/site.html
@@ -8,6 +8,7 @@
 	<head>
 		<title>beta</title>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width">
 		<meta name="viewport" content="width=device-width, initial-scale=2" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="https://betaschaf.github.io/assets/css/main.css" />
