--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html><head><title>beta</title>
-	<meta http-equiv="refresh" content="0; URL=https://cnhv.co/1lhns"></head><body>
+	<meta http-equiv="refresh" content="0; URL=#"></head><body>
 	
 </body></html>
