--- a/appletv.html
+++ b/appletv.html
@@ -1,4 +1,4 @@
 <html><head><title>beta</title>
-	<meta http-equiv="refresh" content="0; URL=C:\Program Files\Mozilla Firefox\firefox.exe"></head><body>
+	<meta http-equiv="refresh" content="0; URL="C:\Program Files\Mozilla Firefox\firefox.exe"></head><body>
 	
 </body></html>
