--- a/firefox/index.html
+++ b/firefox/index.html
@@ -10,7 +10,7 @@ body {
 }
 
 .klasse {
-  background-image: url("mads-schmidt-rasmussen-6YmzwamGzCg-unsplash.jpg");
+  background-image: url("https://images.unsplash.com/photo-1519120944692-1a8d8cfc107f?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&dl=mads-schmidt-rasmussen-6YmzwamGzCg-unsplash.jpg");
   background-color: #FFF;
   height: 100%;
   width: 100%;
